Update GitHub usernames and resume link

--- a/resume.html
+++ b/resume.html
@@ -14,7 +14,7 @@
     <meta property="og:description"
         content="Industrial Robot Programmer & Automation Engineer specializing in KUKA, ABB, FANUC robotics.">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://github.com/SilvestrLiskin">
+    <meta property="og:url" content="https://github.com/silvestrliskinteknorob-lab">
     <meta name="twitter:card" content="summary">
     <link rel="icon" type="image/png" href="profile_photo.png">
     <link
@@ -1417,7 +1417,7 @@
                         <div class="contact-item"><i class="fas fa-phone"></i> ${d.contact.phone}</div>
                         <div class="contact-item"><i class="fas fa-map-marker-alt"></i> ${d.contact.loc}</div>
                         <div class="contact-item"><i class="fab fa-linkedin"></i> <a href="https://www.linkedin.com/in/silvestr-liskin-ab712920b/">silvestr-liskin</a></div>
-                        <div class="contact-item"><i class="fab fa-github"></i> <a href="https://github.com/SilvestrLiskin">SilvestrLiskin</a></div>
+                        <div class="contact-item"><i class="fab fa-github"></i> <a href="https://github.com/silvestrliskinteknorob-lab">silvestrliskinteknorob-lab</a></div>
                     </div>
 
                     <div class="sidebar-section animate-in" style="animation-delay: 200ms">
